Stop the image being truncated on wide screens when js is not available
https://github.com/elifesciences/enhanced-preprints-issues/issues/1281

--- a/assets/sass/patterns/molecules/home-banner.scss
+++ b/assets/sass/patterns/molecules/home-banner.scss
@@ -103,9 +103,11 @@
   }
 
   @media only screen and (min-width: #{get-rem-from-px($bkpt-site--x-wide)}em) {
-    --image-min-width: 480px;
-    --image-preferred-width: 50vh;
-    --image-max-width: 600px;
+    .js & {
+      --image-min-width: 480px;
+      --image-preferred-width: 50vh;
+      --image-max-width: 600px;
+    }
   }
 
   @media only screen and (min-width: #{get-rem-from-px($bkpt-site--home-hero-banner-additional-widest)}em) {
